# tomcosmos

./: .gitignore  LICENSE  PLAN.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
scenarios/: apophis-2029-flyby-context.yaml  apophis-2029-flyby.yaml  apophis-30day.yaml  earth-mars-hohmann.yaml  earth-moon.yaml  jupiter-2x-mass.yaml  jupiter-galileans.yaml  neos-100.yaml  sun-earth-l4-tadpole.yaml  sun-planets-100yr-gr.yaml  sun-planets-100yr.yaml
scripts/: build_apophis_2029_flyby_scenario.py  build_neos_scenario.py  fetch_kernels.py  hello_world.py  mercury_precession.py  overlay_runs.py  refresh_apophis_scenario.py
src/tomcosmos/: __init__.py  cli.py  config.py  constants.py  exceptions.py  kernel_fetch.py  kernels.py  runner.py
src/tomcosmos/analysis/: encounters.py  rotating_frame.py
src/tomcosmos/io/: diagnostics.py  history.py
src/tomcosmos/state/: effects.py  ephemeris.py  events.py  frames.py  ic.py  integrator.py  kepler.py  scenario.py  sim_units.py
src/tomcosmos/targeting/: __init__.py  horizons.py  lambert.py  sbdb.py  transfer.py
src/tomcosmos/viz/: pyvista_viewer.py  textures.py
tests/: conftest.py  test_accuracy.py  test_assist_integrator.py  test_cli.py  test_constants.py  test_dv_events.py  test_earth_mars_hohmann.py  test_effects.py  test_encounters.py  test_ephemeris.py  test_frames.py  test_history_io.py  test_horizons.py  test_ic.py  test_integrator.py  test_kernels.py  test_rotating_frame.py  test_runner.py  test_sbdb.py  test_scenario_fixtures.py  test_scenario_schema.py  test_smoke.py  test_targeting_lambert.py  test_viewer.py
tests/fixtures/scenarios/: good_sun_planets.yaml
