[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomcosmos"
version = "0.0.1"
description = "Solar system state simulator."
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tommy Blankinship" }]
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "rebound>=4,<5",
    "astropy>=6,<8",
    "skyfield>=1.48,<2",
    "spiceypy>=6,<8",
    "astroquery>=0.4.6",
    "pydantic>=2.5,<3",
    "pyyaml>=6.0,<7",
    "typer>=0.12,<1",
    "structlog>=24,<26",
    "pyarrow>=15,<20",
    "pandas>=2.2,<3",
    "pyvista==0.43.10",
    "vtk==9.3.1",
    "trame>=3.5,<4",
]

[project.optional-dependencies]
# Optional: REBOUNDx for additional physics effects (GR, SRP, tides, ...).
# Linux/macOS: pip install 'tomcosmos[reboundx]' pulls from PyPI.
# Windows: REBOUNDx's PyPI source doesn't build with MSVC; install from
# our patched fork until the fixes merge upstream:
#   pip install git+https://github.com/tommybship/reboundx.git@windows-msvc-build
# When not installed, tomcosmos falls back to a Python 1PN GR implementation
# automatically — the `effects: [gr]` toggle still works either way.
reboundx = ["reboundx>=4.6,<5"]
dev = [
    "pytest>=8,<9",
    "pytest-xdist>=3.5,<4",
    "pytest-mpl>=0.17,<1",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
tomcosmos = "tomcosmos.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tomcosmos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# typer uses function calls in argument defaults as the canonical idiom;
# whitelist them so B008 doesn't flag every command definition.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
# Physics code uses single-letter capital names that are textbook
# convention (R for orbital radius, L for angular momentum, M for mean
# anomaly, E for eccentric anomaly, G for gravitational constant, etc.).
# Renaming them to lowercase would make the code harder to read against
# any orbital-mechanics reference, so we exempt the physics modules
# from N803/N806.
"src/tomcosmos/state/ic.py"             = ["N803", "N806"]
"src/tomcosmos/analysis/encounters.py"  = ["N803", "N806"]
"src/tomcosmos/analysis/rotating_frame.py" = ["N803", "N806"]
"tests/test_ic.py"                      = ["N803", "N806"]
"tests/test_rotating_frame.py"          = ["N803", "N806"]
"tests/test_dv_events.py"               = ["N803", "N806"]
"tests/test_encounters.py"              = ["N803", "N806"]

[tool.mypy]
python_version = "3.12"
strict = false

[[tool.mypy.overrides]]
module = "tomcosmos.state.*"
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "rebound.*",
    "reboundx.*",
    "spiceypy.*",
    "skyfield.*",
    "pyvista.*",
    "vtk.*",
    "trame.*",
    "astroquery.*",
    "astropy.*",
    "pandas.*",
    "pyarrow.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "physics: physics-invariant tests (medium speed)",
    "ephemeris: ephemeris-agreement tests (slow, network/kernel access)",
    "viewer: viewer snapshot tests (require display or offscreen GL)",
]
addopts = "-ra --strict-markers"
